--- a/scribble.css
+++ b/scribble.css
@@ -2,7 +2,7 @@
 /* CSS seems backward: List all the classes for which we want a
    particular font, so that the font can be changed in one place.  (It
    would be nicer to reference a font definition from all the places
-   that we want it.) 
+   that we want it.)
 
    As you read the rest of the file, remember to double-check here to
    see if any font is set. */
@@ -23,6 +23,13 @@
 /* Sans-serif: */
 .version {
   font-family: sans-serif;
+}
+
+/* ---------------------------------------- */
+
+h3, h4, h5, h6, h7, h8 {
+  margin-top: 1.75em;
+  margin-bottom: 0.5em;
 }
 
 /* ---------------------------------------- */
@@ -51,18 +58,25 @@ table td {
 /* ---------------------------------------- */
 /* Navigation */
 
-.navleft { 
+.navset {
+  background-color: #f0f0e0;
+  padding: 0.25em 0 0.25em 0;
+}
+
+.navleft {
+  margin-left: 1ex;
   position: relative;
   float: left;
   white-space: nowrap;
 }
-.navright { 
+.navright {
+  margin-right: 1ex;
   position: relative;
   float: right;
   white-space: nowrap;
 }
 .nonavigation {
-  color: #EEEEEE;
+  color: #e0e0e0;
 }
 
 /* ---------------------------------------- */
@@ -109,15 +123,15 @@ table td {
 /* Table of contents, inline */
 
 .toclink {
-text-decoration: none;
-color: blue;
-font-size: 85%;
+  text-decoration: none;
+  color: blue;
+  font-size: 85%;
 }
 
 .toptoclink {
-text-decoration: none;
-color: blue;
-font-weight: bold;
+  text-decoration: none;
+  color: blue;
+  font-weight: bold;
 }
 
 /* ---------------------------------------- */
@@ -129,43 +143,67 @@ font-weight: bold;
   width: 12.5em;
   margin-right: 2em;
 }
+.tocset td {
+  vertical-align: text-top;
+}
 
 .tocview {
   text-align: left;
-  background-color: #F5F5DC;
+  background-color: #f0f0e0;
 }
 
 .tocsub {
   text-align: left;
   margin-top: 0.5em;
-  background-color: #F5F5F5;
+  background-color: #f0f0e0;
 }
 
-.tocviewtitle {
+.tocviewlist, .tocsublist {
+  margin-left: 0.2em;
+  margin-right: 0.2em;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+}
+.tocviewlist table {
   font-size: 82%;
+}
+
+.tocviewsublist, .tocviewsublistonly, .tocviewsublisttop, .tocviewsublistbottom {
+  margin-left: 0.4em;
+  border-left: 1px solid #bbf;
+  padding-left: 0.8em;
+}
+.tocviewsublist {
+   margin-bottom: 1em;
+}
+.tocviewsublist table, 
+.tocviewsublistonly table,
+.tocviewsublisttop table, 
+.tocviewsublistbottom table {
+  font-size: 75%;
+}
+
+.tocviewtitle * {
   font-weight: bold;
-  margin: 0.2em 0.2em 0.2em 0.2em;
-}
-
-.tocviewlist {
-  margin: 0.2em 0.2em 0.2em 0.2em;
-}
-
-.tocviewlist td {
-  font-size: 82%;
-  vertical-align: top;
 }
 
 .tocviewlink {
   text-decoration: none;
+  color: blue;
 }
 
-.tocsublist {
-  margin: 0.2em 0.2em 0.2em 0.2em;
+.tocviewselflink {
+  text-decoration: underline;
+  color: blue;
+}
+
+.tocviewtoggle {
+  text-decoration: none;
+  color: blue;
+  font-size: 75%; /* looks better, and avoids bounce when toggling sub-sections due to font alignments */
 }
 
 .tocsublist td {
-  vertical-align: top;
   padding-left: 1em;
   text-indent: -1em;
 }
@@ -193,7 +231,15 @@ font-weight: bold;
 .tocsubtitle {
   font-size: 82%;
   font-style: italic;
-  margin: 0.2em 0.2em 0.2em 0.2em;
+  margin: 0.2em;
+}
+
+.sepspace {
+  font-size: 40%;
+}
+
+.septitle {
+  font-size: 70%;
 }
 
 /* ---------------------------------------- */
@@ -201,7 +247,7 @@ font-weight: bold;
 
 .inherited {
   width: 100%;
-  margin-top: 1em;
+  margin-top: 0.5em;
   text-align: left;
   background-color: #ECF5F5;
 }
@@ -330,29 +376,13 @@ font-weight: bold;
   text-align: center;
 }
 
-pre {
-  margin-left: 2em;
-}
+pre { margin-left: 2em; }
+blockquote { margin-left: 2em; }
 
-blockquote {
-  margin-left: 2em;
-}
-
-ol {
-  list-style-type: decimal;
-}
-
-ol ol {
-  list-style-type: lower-alpha;
-}
-
-ol ol ol {
-  list-style-type: lower-roman;
-}
-
-ol ol ol ol {
-  list-style-type: upper-alpha;
-}
+ol          { list-style-type: decimal; }
+ol ol       { list-style-type: lower-alpha; }
+ol ol ol    { list-style-type: lower-roman; }
+ol ol ol ol { list-style-type: upper-alpha; }
 
 i {
 }
@@ -362,9 +392,9 @@ i {
   background-color: #E8E8FF;
 }
 
-.inlinetop{ 
+.inlinetop{
   display: inline;
-  vertical-align: top;
+  vertical-align: text-top;
 }
 
 .together {
@@ -372,7 +402,7 @@ i {
 }
 
 .prototype td {
-  vertical-align: top;
+  vertical-align: text-top;
 }
 .longprototype td {
   vertical-align: bottom;
@@ -383,7 +413,7 @@ i {
 }
 
 .argcontract td {
-  vertical-align: top;
+  vertical-align: text-top;
 }
 
 .ghost {
@@ -406,6 +436,10 @@ i {
 .hspace {
 }
 
+.slant {
+  font-style: oblique;
+}
+
 .inferencetop td {
   border-bottom: 1px solid black;
   text-align: center;
@@ -424,23 +458,27 @@ i {
   color: blue;
 }
 
-.techlink {
-  text-decoration: none;
-  color: black;
-}
+.techoutside       { text-decoration: underline; color: #b0b0b0; }
+.techoutside:hover { text-decoration: underline; color: blue; }
 
-.techlink:hover {
-  text-decoration: underline;
-  color: blue;
-}
+/* .techinside:hover doesn't work with FF, .techinside:hover>
+   .techinside doesn't work with IE, so use both (and IE doesn't
+   work with inherit in the second one, so use blue directly) */
+.techinside                    { color: black; }
+.techinside:hover              { color: blue; }
+.techoutside:hover>.techinside { color: inherit; }
 
 .bibliography td {
-  vertical-align: top;
+  vertical-align: text-top;
 }
 
 .imageleft {
   float: left;
   margin-right: 0.3em;
+}
+
+.smaller{
+  font-size: 82%;
 }
 
 /* A hack, inserted to break some Scheme ids: */
@@ -449,7 +487,25 @@ i {
   font-size: 1px;
 }
 
-.compact li p { 
-  margin: 0 0 0 0;
-  padding: 0 0 0 0;
+.compact li p {
+  margin: 0em;
+  padding: 0em;
+}
+
+.noborder img {
+  border: 0;
+}
+
+.author {
+  position: relative;
+  float: right;
+  left: 2em;
+  top: -3em;
+  height: 0em;
+  width: 23em; /* very wide to keep author names on separate lines */
+  margin: 0em -23em 0em 0em;
+  font-size: 82%;
+}
+.author:before {
+  content: "by ";
 }
